content/docs/v0.9.0-rc.4/addons/percona-xtradb/README.md
---
title: Percona XtraDB Addon Overview | Stash
description: Percona XtraDB Addon Overview | Stash
menu:
  docs_v0.9.0-rc.4:
    identifier: stash-percona-xtradb-readme
    name: Readme
    parent: stash-percona-xtradb
    weight: -1
product_name: stash
menu_name: docs_v0.9.0-rc.4
section_menu_id: stash-addons
url: /docs/v0.9.0-rc.4/addons/percona-xtradb/
aliases:
- /docs/v0.9.0-rc.4/addons/percona-xtradb/README/
info:
  catalog: v0.2.0
  cli: v0.3.0
  version: v0.9.0-rc.4
---

# Stash Percona XtraDB Addon

Stash 0.9.0+ supports extending its functionality through addons. Stash Percona XtraDB addon enables Stash to backup and restore Percona XtraDB databases.

This guide will give you an overview of which Percona XtraDB versions are supported and how the docs are organized.

## Supported Percona XtraDB Versions

Stash supports backup and restore of the following Percona XtraDB versions:

- [5.7](/docs/v0.9.0-rc.4/addons/percona-xtradb/guides/5.7/clustered)

## Documentation Overview

Stash Percona XtraDB documentations are organized as below:

- [How does it works?](/docs/v0.9.0-rc.4/addons/percona-xtradb/overview) gives an overview of how backup and restore process for Percona XtraDB database works in Stash.
- [Setup](/docs/v0.9.0-rc.4/addons/percona-xtradb/setup/install) shows how to install and uninstall Percona XtraDB addon for Stash.
- [Guides](/docs/v0.9.0-rc.4/addons/percona-xtradb/guides/5.7/clustered) contains step by step guides to backup and restore different versions of Percona XtraDB databases.
